--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             
   </head>
   <body>  
+      <h1>My Cool Website!</h1>
       <div id="main"></div>
   </body>
   <script src="./dist/website.bundle.js"></script>
