Added some styles and a profile picture

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/styles/reset.css">
     <link rel="stylesheet" href="./assets/styles/fonts.css">
     <link rel="stylesheet" href="./assets/styles/main.css">
+    <link rel="stylesheet" href="./assets/styles/about.css">
             
   </head>
   <body>  
@@ -15,7 +16,7 @@
     <section class="main">
       <section class="sidebar">
         <p class="sidebar-title">jetilling:  </p>
-        <p id="subtitle">(My Cool Website}</p>
+        <p id="subtitle">{My Cool Website}</p>
 
         <nav class="links">
           <a id="about-link">About</a>
