--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/styles/fonts.css">
     <link rel="stylesheet" href="./assets/styles/main.css">
     <link rel="stylesheet" href="./assets/styles/about.css">
+    <link rel="stylesheet" href="./assets/styles/contact.css">
             
   </head>
   <body>  
@@ -19,16 +20,16 @@
         <p id="subtitle">{My Cool Website}</p>
 
         <nav class="links">
-          <a id="about-link">About</a>
-          <a id="contact-link">Contact</a>
-          <a>News</a>
-          <a>Write!</a>
+          <a href="#/about" id="about-link">About</a>
+          <a href="#/contact" id="contact-link">Contact</a>
+          <a href="#/projects">Projects</a>
+          <a href="#/blog" id="blog-link">Blog!</a>
         </nav>
         <input class="sidebar-search" type="text" name="" value="">
         <button type="button" name="button" class="sidebar-search-btn">Search</button>
       </section>
       <section class="cover">
-        <div id="main"></div>
+        <div id="main" style="height: 100%"></div>
       </section>
     </section>
       
