committing all updated info

--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <title>jetilling</title>
     <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://afeld.github.io/emoji-css/emoji.css">
     <link rel="stylesheet" href="./assets/styles/reset.css">
     <link rel="stylesheet" href="./assets/styles/fonts.css">
     <link rel="stylesheet" href="./assets/styles/main.css">
     <link rel="stylesheet" href="./assets/styles/about.css">
     <link rel="stylesheet" href="./assets/styles/contact.css">
+    <link rel="stylesheet" href="./assets/styles/blog.css">
+    <link rel="stylesheet" href="./assets/styles/projects.css">
+    
             
   </head>
   <body>  
-    <div class="navbar"></div>
-    <div class="overlay"></div>
     <section class="main">
       <section class="sidebar">
         <p class="sidebar-title">jetilling:  </p>
@@ -27,6 +29,9 @@
         </nav>
         <input class="sidebar-search" type="text" name="" value="">
         <button type="button" name="button" class="sidebar-search-btn">Search</button>
+        <div class="note-container">
+          <p class="note"><i class="em em-construction"></i> note: This site is very much a work in progress, and as such it has not been adjusted for mobile or larger screens. Please be nice :)</p>
+        </div>
       </section>
       <section class="cover">
         <div id="main" style="height: 100%"></div>
