Finished project explainations

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./assets/styles/contact.css">
     <link rel="stylesheet" href="./assets/styles/blog.css">
     <link rel="stylesheet" href="./assets/styles/projects.css">
+    <link rel="stylesheet" href="./assets/styles/aboutThisSite.css">
     
             
   </head>
@@ -26,6 +27,7 @@
           <a href="#/contact" id="contact-link">Contact</a>
           <a href="#/projects">Projects</a>
           <a href="#/blog" id="blog-link">Blog!</a>
+          <a href="#/about-this-site">About This Site</a>
         </nav>
         <input class="sidebar-search" type="text" name="" value="">
         <button type="button" name="button" class="sidebar-search-btn">Search</button>
