added files to fix blog

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./assets/styles/about.css">
     <link rel="stylesheet" href="./assets/styles/contact.css">
     <link rel="stylesheet" href="./assets/styles/blog.css">
-    <link rel="stylesheet" href="./assets/styles/projects.css">
+    <link rel="stylesheet" href="./assets/styles/devProjects.css">
     <link rel="stylesheet" href="./assets/styles/aboutThisSite.css">
     
             
@@ -25,7 +25,7 @@
         <nav class="links">
           <a href="#/about" id="about-link">About</a>
           <a href="#/contact" id="contact-link">Contact</a>
-          <a href="#/projects">Projects</a>
+          <a href="#/dev-projects">Dev Projects</a>
           <a href="#/blog" id="blog-link">Blog!</a>
           <a href="#/about-this-site">About This Site</a>
         </nav>
